fixed footer spacing

--- a/src/App.css
+++ b/src/App.css
@@ -16,10 +16,19 @@
     font-weight: bold;
 }
 
+.page-wrapper {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
 *{
     box-sizing: border-box;
 }
 
+main{
+    flex: 1;
+}
 
 body{
     width: 100%;
